--- a/locale/lt_LT/LC_MESSAGES/messages.po
+++ b/locale/lt_LT/LC_MESSAGES/messages.po
@@ -2095,23 +2095,23 @@ msgstr "Tikrinti dar kartą"
 
 #: install/templates/step5.html.twig:3
 msgid "Setup account and nameservers"
-msgstr "Setup account and nameservers"
+msgstr "Paskyros ir vardų serverių nustatymas"
 
 #: install/templates/step5.html.twig:8
 msgid "Setup account and name servers"
-msgstr "Setup account and name servers"
+msgstr "Paskyros ir vardų serverių nustatymas"
 
 #: install/templates/step5.html.twig:12
 msgid "Configuration:"
-msgstr "Configuration:"
+msgstr "Konfigūracija:"
 
 #: install/templates/step5.html.twig:12
 msgid "Now we will gather all details for the configuration itself."
-msgstr "Now we will gather all details for the configuration itself."
+msgstr "Dabar surinksime visą informaciją pačiai konfigūracijai."
 
 #: install/templates/step5.html.twig:21
 msgid "Database User"
-msgstr "Database User"
+msgstr "Duomenų bazės vartotojas"
 
 #: install/templates/step5.html.twig:31
 msgid ""
@@ -2121,23 +2121,23 @@ msgstr ""
 
 #: install/templates/step5.html.twig:41
 msgid "Provide the user password"
-msgstr "Provide the user password"
+msgstr "Nurodykite vartotojo slaptažodį"
 
 #: install/templates/step5.html.twig:45
 msgid "The password for this username."
-msgstr "The password for this username."
+msgstr "Šio vartotojo vardo slaptažodis."
 
 #: install/templates/step5.html.twig:54
 msgid "DNS Settings"
-msgstr "DNS Settings"
+msgstr "DNS nustatymai"
 
 #: install/templates/step5.html.twig:58
 msgid "Hostmaster"
-msgstr "Hostmaster"
+msgstr "Pagrindinė stotis"
 
 #: install/templates/step5.html.twig:62
 msgid "Provide the DNS hostmaster"
-msgstr "Provide the DNS hostmaster"
+msgstr "Nurodykite DNS pagrindinę stotį"
 
 #: install/templates/step5.html.twig:65
 msgid ""
@@ -2149,11 +2149,11 @@ msgstr ""
 
 #: install/templates/step5.html.twig:70
 msgid "Primary nameserver"
-msgstr "Primary nameserver"
+msgstr "Pagrindinis vardų serveris"
 
 #: install/templates/step5.html.twig:74
 msgid "Provide the primary nameserver"
-msgstr "Provide the primary nameserver"
+msgstr "Nurodykite pagrindinį vardų serverį"
 
 #: install/templates/step5.html.twig:77
 msgid ""
@@ -2165,11 +2165,11 @@ msgstr ""
 
 #: install/templates/step5.html.twig:82
 msgid "Secondary nameserver"
-msgstr "Secondary nameserver"
+msgstr "Antrinis vardų serveris"
 
 #: install/templates/step5.html.twig:86
 msgid "Provide the secondary nameserver"
-msgstr "Provide the secondary nameserver"
+msgstr "Nurodykite antrinį vardų serverį"
 
 #: install/templates/step5.html.twig:89
 msgid ""
@@ -2181,11 +2181,11 @@ msgstr ""
 
 #: install/templates/step5.html.twig:95
 msgid "Tertiary Nameserver"
-msgstr "Tertiary Nameserver"
+msgstr "Tretinis vardų serveris"
 
 #: install/templates/step5.html.twig:95 install/templates/step5.html.twig:108
 msgid "optional"
-msgstr "optional"
+msgstr "neprivalomas"
 
 #: install/templates/step5.html.twig:102
 msgid ""
@@ -2197,7 +2197,7 @@ msgstr ""
 
 #: install/templates/step5.html.twig:108
 msgid "Quaternary Nameserver"
-msgstr "Quaternary Nameserver"
+msgstr "Ketvirtinis vardų serveris"
 
 #: install/templates/step5.html.twig:115
 msgid ""
