--- a/locale/tr_TR/LC_MESSAGES/messages.po
+++ b/locale/tr_TR/LC_MESSAGES/messages.po
@@ -2095,23 +2095,23 @@ msgstr "Tekrar Kontrol Et"
 
 #: install/templates/step5.html.twig:3
 msgid "Setup account and nameservers"
-msgstr "Setup account and nameservers"
+msgstr "Hesap ve ad sunucularını ayarla"
 
 #: install/templates/step5.html.twig:8
 msgid "Setup account and name servers"
-msgstr "Setup account and name servers"
+msgstr "Hesap ve ad sunucularını ayarla"
 
 #: install/templates/step5.html.twig:12
 msgid "Configuration:"
-msgstr "Configuration:"
+msgstr "Yapılandırma:"
 
 #: install/templates/step5.html.twig:12
 msgid "Now we will gather all details for the configuration itself."
-msgstr "Now we will gather all details for the configuration itself."
+msgstr "Şimdi yapılandırmanın kendisi için tüm ayrıntıları toplayacağız."
 
 #: install/templates/step5.html.twig:21
 msgid "Database User"
-msgstr "Database User"
+msgstr "Veritabanı Kullanıcısı"
 
 #: install/templates/step5.html.twig:31
 msgid ""
@@ -2121,15 +2121,15 @@ msgstr ""
 
 #: install/templates/step5.html.twig:41
 msgid "Provide the user password"
-msgstr "Provide the user password"
+msgstr "Kullanıcı şifresini girin"
 
 #: install/templates/step5.html.twig:45
 msgid "The password for this username."
-msgstr "The password for this username."
+msgstr "Bu kullanıcı adı için şifre."
 
 #: install/templates/step5.html.twig:54
 msgid "DNS Settings"
-msgstr "DNS Settings"
+msgstr "DNS Ayarları"
 
 #: install/templates/step5.html.twig:58
 msgid "Hostmaster"
@@ -2137,7 +2137,7 @@ msgstr "Hostmaster"
 
 #: install/templates/step5.html.twig:62
 msgid "Provide the DNS hostmaster"
-msgstr "Provide the DNS hostmaster"
+msgstr "DNS hostmaster'ı girin"
 
 #: install/templates/step5.html.twig:65
 msgid ""
@@ -2149,11 +2149,11 @@ msgstr ""
 
 #: install/templates/step5.html.twig:70
 msgid "Primary nameserver"
-msgstr "Primary nameserver"
+msgstr "Birincil ad sunucusu"
 
 #: install/templates/step5.html.twig:74
 msgid "Provide the primary nameserver"
-msgstr "Provide the primary nameserver"
+msgstr "Birincil ad sunucusunu girin"
 
 #: install/templates/step5.html.twig:77
 msgid ""
@@ -2165,11 +2165,11 @@ msgstr ""
 
 #: install/templates/step5.html.twig:82
 msgid "Secondary nameserver"
-msgstr "Secondary nameserver"
+msgstr "İkincil ad sunucusu"
 
 #: install/templates/step5.html.twig:86
 msgid "Provide the secondary nameserver"
-msgstr "Provide the secondary nameserver"
+msgstr "İkincil ad sunucusunu girin"
 
 #: install/templates/step5.html.twig:89
 msgid ""
@@ -2181,11 +2181,11 @@ msgstr ""
 
 #: install/templates/step5.html.twig:95
 msgid "Tertiary Nameserver"
-msgstr "Tertiary Nameserver"
+msgstr "Üçüncül Ad Sunucusu"
 
 #: install/templates/step5.html.twig:95 install/templates/step5.html.twig:108
 msgid "optional"
-msgstr "optional"
+msgstr "isteğe bağlı"
 
 #: install/templates/step5.html.twig:102
 msgid ""
@@ -2197,7 +2197,7 @@ msgstr ""
 
 #: install/templates/step5.html.twig:108
 msgid "Quaternary Nameserver"
-msgstr "Quaternary Nameserver"
+msgstr "Dördüncül Ad Sunucusu"
 
 #: install/templates/step5.html.twig:115
 msgid ""
