--- a/locale/tr_TR/LC_MESSAGES/messages.po
+++ b/locale/tr_TR/LC_MESSAGES/messages.po
@@ -1810,7 +1810,7 @@ msgstr "Delete record in zone template"
 
 #: install/templates/step6.html.twig:3
 msgid "Create limited rights user"
-msgstr "Create limited rights user"
+msgstr "Sınırlı haklara sahip kullanıcı oluştur"
 
 #: install/templates/step8.html.twig:8 install/templates/step3.html.twig:8
 msgid "Step"
@@ -1818,11 +1818,11 @@ msgstr "Step"
 
 #: install/templates/step6.html.twig:8
 msgid "Create limited-rights user"
-msgstr "Create limited-rights user"
+msgstr "Sınırlı haklara sahip kullanıcı oluştur"
 
 #: install/templates/step6.html.twig:13
 msgid "Limited Database Rights:"
-msgstr "Limited Database Rights:"
+msgstr "Sınırlı Veritabanı Hakları:"
 
 #: install/templates/step6.html.twig:13
 msgid ""
@@ -1836,11 +1836,11 @@ msgstr ""
 
 #: install/templates/step6.html.twig:18
 msgid "Database Commands"
-msgstr "Database Commands"
+msgstr "Veritabanı Komutları"
 
 #: install/templates/step6.html.twig:21
 msgid "Execute the following commands based on your database:"
-msgstr "Execute the following commands based on your database:"
+msgstr "Veritabanınıza göre aşağıdaki komutları çalıştırın:"
 
 #: install/templates/step6.html.twig:26
 msgid ""
