i18n(locale): Add translations for step7.html.twig to all locales

--- a/locale/de_DE/LC_MESSAGES/messages.po
+++ b/locale/de_DE/LC_MESSAGES/messages.po
@@ -1873,11 +1873,11 @@ msgstr "Installation step"
 
 #: install/templates/step7.html.twig:3 install/templates/step7.html.twig:8
 msgid "Create configuration file"
-msgstr "Create configuration file"
+msgstr "Konfigurationsdatei erstellen"
 
 #: install/templates/step7.html.twig:12
 msgid "Configuration File:"
-msgstr "Configuration File:"
+msgstr "Konfigurationsdatei:"
 
 #: install/templates/step7.html.twig:12
 msgid "Create the file"
